--- a/src/components/CountriesList.module.css
+++ b/src/components/CountriesList.module.css
@@ -1,8 +1,8 @@
-.countryList {
+.countriesList {
   width: 100%;
   height: 65vh;
   list-style: none;
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
 
   display: grid;
