--- a/src/components/Map.module.css
+++ b/src/components/Map.module.css
@@ -20,7 +20,7 @@
 :global(.leaflet-popup .leaflet-popup-content) {
   font-size: 1.5rem;
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   gap: 1rem;
 }
 
